kubernetes/ingress/employee-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-backend-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
    - host: api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-backend-svc
                port:
                  number: 8080
