kubernetes/ingress/employee-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
    - host: employee.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-frontend-svc
                port:
                  number: 80
